projects/apps/trip-plan/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trip-plan
  namespace: dev
  labels:
    app.kubernetes.io/name: trip-plan
    app.kubernetes.io/part-of: trip-plan
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: trip-plan-app
      port:
        number: 80
  tls:
    - hosts:
        - trip-plan
